--- a/TodoMVVM/Base.lproj/Main.storyboard
+++ b/TodoMVVM/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                         <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="todoItemCell" textLabel="FGf-vK-K1u" detailTextLabel="QTJ-Pl-t3e" style="IBUITableViewCellStyleSubtitle" id="IiV-LO-rFr" customClass="TodoItemTableViewCell" customModule="TodoMVVM" customModuleProvider="target">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="FGf-vK-K1u" detailTextLabel="QTJ-Pl-t3e" style="IBUITableViewCellStyleSubtitle" id="IiV-LO-rFr" customClass="TodoItemTableViewCell" customModule="TodoMVVM" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IiV-LO-rFr" id="VJu-jk-ENT">
